--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -27,16 +27,27 @@
 
       <nav aria-label="...">
         <ul class="pagination">
+
+          {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Previous</a></li>
+          {% endif %}
+
           {% for p in page_obj.paginator.page_range %}
 
           {% if p == page_obj.number %}
-              <li class="page-item active" aria-current="page">
-                <a class="page-link" href="?page={{ p }}">{{ p }}</a>
-              </li>
+            <li class="page-item active" aria-current="page">
+              <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+            </li>
           {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
-              <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
           {% endif %}
+
           {% endfor %}
+
+          {% if page_obj.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+          {% endif %}
+
         </ul>
       </nav>
 
