--- a/mysite/mysite/static/css/admin.css
+++ b/mysite/mysite/static/css/admin.css
@@ -11,10 +11,10 @@
 #content{
     background: repeating-linear-gradient(
   45deg,
-  #606dbc,
-  #606dbc 10px,
-  #465298 10px,
-  #465298 20px
+  #880e4f,
+  #880e4f 10px,
+  #ad1457 10px,
+  #ad1457 20px
 );
 }
 div.breadcrumbs {
